--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <p>(234+23)</p>
                     </div>
                 </div>
-                <div class="package" data-price="450">
+                <div class="package" data-price="440">
                     <img src="https://static-src.vocagame.com/gamestoreindonesia/gamestoreindonesia%20dml4-88d7-original.webp" alt="Diamonds">
                     <div class="details">
                         <h3>343</h3>
@@ -199,7 +199,7 @@
                     </div>
                 </div>
                 <div class="package" data-price="750">
-                    <img src="diamond.png" alt="Diamonds">
+                    <img src="https://th.bing.com/th/id/OIP.dp37k8vVq5wg1Sucmy523wAAAA?w=100&h=100&c=7&r=0&o=5&pid=1.7" alt="Diamonds">
                     <div class="details">
                         <h3>Twilight Pass</h3>
                         <p></p>
