--- a/index.html
+++ b/index.html
@@ -213,9 +213,11 @@
                 <input type="text" id="user-id" name="user-id">
                 <label for="zone-id">Zone ID</label>
                 <input type="text" id="zone-id" name="zone-id">
-                <div class="total">   </div>
+                <div class="total">  </div> </section>
+        <section class="order-info">
+            <h3>Payment Options</h3>  </div>
               <div class="payment-options">
-                    <h4>Payment Options</h4>
+                    
                     <label><input type="radio" name="payment-method" value="GooglePay"><img src="https://hubscredits.com/assets/images/method/1705176146_4b314268cc3218fd5099.png" > GooglePay</label>
                     <label><input type="radio" name="payment-method" value="Paytm"><img src="https://i.ibb.co/KxNLWV9/download-1.jpg" > Paytm</label>
                     <label><input type="radio" name="payment-method" value="PhonePe"><img src="https://hubscredits.com/assets/images/method/1705176253_4b69045b0e446ecf320c.png" > PhonePe</label>
