--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
                 <li>1. Select the value of Diamonds you wish to purchase</li>
                 <li>2. Provide the correct user ID and SERVER to avoid unnecessary delay in top-up ✅</li>
                 <li>3. Complete the payment, and DIAMOND be added immediately to your ML account WITHIN SECONDS</li>
-            </ul>
+            </ul> </section>
+        <section class="order-info">
+            <h3>Select Service Amount</h3>
+         </diV>
             <div class="packages">
                 <div class="package" data-price="135">
                     <img src="https://th.bing.com/th/id/R.1fd08331055fe143330fdd18877eba43?rik=hMvA%2bc6RLHf3og&riu=http%3a%2f%2fwww.kazukiofficialstore.com%2fweb%2fimages%2fpackage%2f1679568226-WEEKLY+DIAMOND.png&ehk=Uph1WxqlI8J0CT97%2bMYLBHB0OSxDiryOSl%2bHz8kQREY%3d&risl=&pid=ImgRaw&r=0" alt="Diamonds">
